# digital-twin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  main.py  makefile  pyproject.toml
.devcontainer/: devcontainer.json
checkpoints/cache/: knn.pkl
checkpoints/pools_hdd_sequential/: knn.pkl
checkpoints/pools_ssd_random/: knn.pkl
checkpoints/pools_ssd_sequential/: knn.pkl
dataset/: cache_data.csv
dataset/cache/: cache.csv  test_cache.csv  test_test_cache.csv  test_train_cache.csv  train_cache.csv  train_test_cache.csv  train_train_cache.csv
dataset/pools/: hdd_sequential.csv  ssd_random.csv  ssd_sequential.csv  test_hdd_sequential.csv  test_ssd_random.csv  test_ssd_sequential.csv  test_test_hdd_sequential.csv  test_test_ssd_random.csv  test_test_ssd_sequential.csv  test_train_hdd_sequential.csv  test_train_ssd_random.csv  test_train_ssd_sequential.csv  test_train_train_ssd_random.csv  train_hdd_sequential.csv  train_ssd_random.csv  train_ssd_sequential.csv  train_test_hdd_sequential.csv  (+6 more)
digital_twin/: data.py
models_checkpoints/: ssd_sequential.cbm
notebooks/: anomalies.ipynb  examples.ipynb  metrics.ipynb  new_plots.ipynb  vis.ipynb
output/: knn.json
results/: agg_metrics.csv
scripts/: calculate_summary_stats.py  calculate_summary_stats_datasize_vs_metrics_sweep.py  catboost_features_importance.py  denesity_estimation_experiment.py  density_estimation_datasize_sweep_training.py  generate_train_test_split.py  knn_experiment.py  nf_experiment.py  train_eval_knn.py
src/: data.py  fd.py  viz.py
(+95 files in other folders)
