[tool.poetry]
name = "digital-twin"
version = "0.1.0"
description = ""
authors = ["Abdalaziz Rashid <abdalaziz.rashid@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "digital_twin"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
