[tool.poetry]
name = "digital-twin"
version = "0.1.0"
description = ""
authors = ["Abdalaziz Rashid <abdalaziz.rashid@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
# packages = [{include = "digital_twin"}]

[tool.poetry.dependencies]
python = "^3.9"
catboost = "^1.1.1"
pandera = "^0.13.4"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
